...
import com.waiphyo.common.utils.UiText
import com.waiphyo.search.screens.favorite.FavoriteScreenTestTag.DELETE
import kotlinx.coroutines.flow.collectLatest


object FavoriteScreenTestTag {
    const val LAZY_COL = "lazy_col"
    const val DROP_DOWN = "drop_down"
    const val ALPHABETICAL = "alphabetical"
    const val LESS_INGREDIENT = "less_ingredient"
    const val RESET = "rest"
    const val DELETE = "delete"
}

@OptIn(ExperimentalMaterial3Api::class, ExperimentalLayoutApi::class)
@Composable
fun FavoriteScreen(
    modifier: Modifier = Modifier,
...
            if (list.isEmpty()) {
                Box(
                    modifier = Modifier
                        .padding(it)
                        .fillMaxSize(), contentAlignment = Alignment.Center
                ) {
                    Text(text = "Nothing Found")
                }
            } else {
                LazyColumn(
                    modifier = Modifier.testTag(FavoriteScreenTestTag.LAZY_COL)
                        .padding(it)
                        .fillMaxSize()
...
