...
import com.waiphyo.common.navigation.NavigationRoute
import com.waiphyo.common.utils.UiText
import com.waiphyo.search.domain.model.RecipeDetails
import kotlinx.coroutines.flow.collectLatest

object RecipeDetailsScreenTestTag{
    const val INSERT="insert"
    const val DELETE="delete"
    const val ARROW_BACK = "arrow_back"
}

@OptIn(ExperimentalMaterial3Api::class)
@Composable
fun RecipeDetailsScreen(
    modifier: Modifier = Modifier,
...
