...
import coil.compose.AsyncImage
import com.waiphyo.common.navigation.NavigationRoute
import com.waiphyo.common.utils.UiText
import kotlinx.coroutines.flow.collectLatest

object RecipeListScreenTestTag {
    const val SEARCH = "search"
    const val LAZY_COL = "lazy_col_recipe"
    const val FLOATING_ACTION_BTN = "fab"
}

@OptIn(ExperimentalLayoutApi::class)
@Composable
fun RecipeListScreen(
    modifier: Modifier = Modifier,
...
